// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`only grant permission policies as requested verify CRUD policies being granted 1`] = `
Array [
  Object {
    "Action": Array [
      "geo:CreateMap",
      "geo:DescribeMap",
      "geo:GetMapGlyphs",
      "geo:GetMapSprites",
      "geo:GetMapStyleDescriptor",
      "geo:GetMapTile",
      "geo:DeleteMap",
    ],
    "Effect": "Allow",
    "Resource": Array [
      Object {
        "Fn::Join": Array [
          "",
          Array [
            "arn:aws:geo:",
            Object {
              "Ref": "AWS::Region",
            },
            ":",
            Object {
              "Ref": "AWS::AccountId",
            },
            ":map/",
            Object {
              "Ref": "geomap12345Name",
            },
          ],
        ],
      },
    ],
  },
  Object {
    "Action": Array [
      "geo:CreatePlaceIndex",
      "geo:DescribePlaceIndex",
      "geo:SearchPlaceIndexForPosition",
      "geo:SearchPlaceIndexForText",
      "geo:SearchPlaceIndexForSuggestions",
      "geo:DeletePlaceIndex",
    ],
    "Effect": "Allow",
    "Resource": Array [
      Object {
        "Fn::Join": Array [
          "",
          Array [
            "arn:aws:geo:",
            Object {
              "Ref": "AWS::Region",
            },
            ":",
            Object {
              "Ref": "AWS::AccountId",
            },
            ":place-index/",
            Object {
              "Ref": "geoindex12345Name",
            },
          ],
        ],
      },
    ],
  },
]
`;

exports[`only grant permission policies as requested verify CRUD policies being granted 2`] = `
Array [
  Object {
    "attributes": Array [
      "Name",
    ],
    "category": "geo",
    "resourceName": "map12345",
  },
  Object {
    "attributes": Array [
      "Name",
    ],
    "category": "geo",
    "resourceName": "index12345",
  },
]
`;

exports[`only grant permission policies as requested verify create policies being granted 1`] = `
Array [
  Object {
    "Action": Array [
      "geo:CreateMap",
    ],
    "Effect": "Allow",
    "Resource": Array [
      Object {
        "Fn::Join": Array [
          "",
          Array [
            "arn:aws:geo:",
            Object {
              "Ref": "AWS::Region",
            },
            ":",
            Object {
              "Ref": "AWS::AccountId",
            },
            ":map/",
            Object {
              "Ref": "geomap12345Name",
            },
          ],
        ],
      },
    ],
  },
  Object {
    "Action": Array [
      "geo:CreatePlaceIndex",
    ],
    "Effect": "Allow",
    "Resource": Array [
      Object {
        "Fn::Join": Array [
          "",
          Array [
            "arn:aws:geo:",
            Object {
              "Ref": "AWS::Region",
            },
            ":",
            Object {
              "Ref": "AWS::AccountId",
            },
            ":place-index/",
            Object {
              "Ref": "geoindex12345Name",
            },
          ],
        ],
      },
    ],
  },
]
`;

exports[`only grant permission policies as requested verify create policies being granted 2`] = `
Array [
  Object {
    "attributes": Array [
      "Name",
    ],
    "category": "geo",
    "resourceName": "map12345",
  },
  Object {
    "attributes": Array [
      "Name",
    ],
    "category": "geo",
    "resourceName": "index12345",
  },
]
`;

exports[`only grant permission policies as requested verify delete policies being granted 1`] = `
Array [
  Object {
    "Action": Array [
      "geo:DeleteMap",
    ],
    "Effect": "Allow",
    "Resource": Array [
      Object {
        "Fn::Join": Array [
          "",
          Array [
            "arn:aws:geo:",
            Object {
              "Ref": "AWS::Region",
            },
            ":",
            Object {
              "Ref": "AWS::AccountId",
            },
            ":map/",
            Object {
              "Ref": "geomap12345Name",
            },
          ],
        ],
      },
    ],
  },
  Object {
    "Action": Array [
      "geo:DeletePlaceIndex",
    ],
    "Effect": "Allow",
    "Resource": Array [
      Object {
        "Fn::Join": Array [
          "",
          Array [
            "arn:aws:geo:",
            Object {
              "Ref": "AWS::Region",
            },
            ":",
            Object {
              "Ref": "AWS::AccountId",
            },
            ":place-index/",
            Object {
              "Ref": "geoindex12345Name",
            },
          ],
        ],
      },
    ],
  },
]
`;

exports[`only grant permission policies as requested verify delete policies being granted 2`] = `
Array [
  Object {
    "attributes": Array [
      "Name",
    ],
    "category": "geo",
    "resourceName": "map12345",
  },
  Object {
    "attributes": Array [
      "Name",
    ],
    "category": "geo",
    "resourceName": "index12345",
  },
]
`;

exports[`only grant permission policies as requested verify read policies being granted 1`] = `
Array [
  Object {
    "Action": Array [
      "geo:DescribeMap",
      "geo:GetMapGlyphs",
      "geo:GetMapSprites",
      "geo:GetMapStyleDescriptor",
      "geo:GetMapTile",
    ],
    "Effect": "Allow",
    "Resource": Array [
      Object {
        "Fn::Join": Array [
          "",
          Array [
            "arn:aws:geo:",
            Object {
              "Ref": "AWS::Region",
            },
            ":",
            Object {
              "Ref": "AWS::AccountId",
            },
            ":map/",
            Object {
              "Ref": "geomap12345Name",
            },
          ],
        ],
      },
    ],
  },
  Object {
    "Action": Array [
      "geo:DescribePlaceIndex",
      "geo:SearchPlaceIndexForPosition",
      "geo:SearchPlaceIndexForText",
      "geo:SearchPlaceIndexForSuggestions",
    ],
    "Effect": "Allow",
    "Resource": Array [
      Object {
        "Fn::Join": Array [
          "",
          Array [
            "arn:aws:geo:",
            Object {
              "Ref": "AWS::Region",
            },
            ":",
            Object {
              "Ref": "AWS::AccountId",
            },
            ":place-index/",
            Object {
              "Ref": "geoindex12345Name",
            },
          ],
        ],
      },
    ],
  },
]
`;

exports[`only grant permission policies as requested verify read policies being granted 2`] = `
Array [
  Object {
    "attributes": Array [
      "Name",
    ],
    "category": "geo",
    "resourceName": "map12345",
  },
  Object {
    "attributes": Array [
      "Name",
    ],
    "category": "geo",
    "resourceName": "index12345",
  },
]
`;

exports[`only grant permission policies as requested verify update policies being granted 1`] = `
Array [
  Object {
    "Action": Array [],
    "Effect": "Allow",
    "Resource": Array [
      Object {
        "Fn::Join": Array [
          "",
          Array [
            "arn:aws:geo:",
            Object {
              "Ref": "AWS::Region",
            },
            ":",
            Object {
              "Ref": "AWS::AccountId",
            },
            ":map/",
            Object {
              "Ref": "geomap12345Name",
            },
          ],
        ],
      },
    ],
  },
  Object {
    "Action": Array [],
    "Effect": "Allow",
    "Resource": Array [
      Object {
        "Fn::Join": Array [
          "",
          Array [
            "arn:aws:geo:",
            Object {
              "Ref": "AWS::Region",
            },
            ":",
            Object {
              "Ref": "AWS::AccountId",
            },
            ":place-index/",
            Object {
              "Ref": "geoindex12345Name",
            },
          ],
        ],
      },
    ],
  },
]
`;

exports[`only grant permission policies as requested verify update policies being granted 2`] = `
Array [
  Object {
    "attributes": Array [
      "Name",
    ],
    "category": "geo",
    "resourceName": "map12345",
  },
  Object {
    "attributes": Array [
      "Name",
    ],
    "category": "geo",
    "resourceName": "index12345",
  },
]
`;
